<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TeacherActivity">

    <TextView
        android:id="@+id/txtViewTeacher"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="30dp"
        android:textAlignment="center"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/etSubjectT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:ems="10"
        android:hint="@string/Subject"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etMessageT"
        android:layout_width="match_parent"
        android:layout_height="308dp"
        android:layout_margin="30dp"
        android:ems="10"
        android:hint="@string/Message"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnSendT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/Send" />

</LinearLayout>